--- a/BigSave.Web/Views/Product/Detail.cshtml
+++ b/BigSave.Web/Views/Product/Detail.cshtml
@@ -1,3 +1,4 @@
+@using System.Globalization;
 @using BigSave.Web.Models.DataModel;
 @model ProductViewModel
 <div class='container'>
@@ -21,21 +22,7 @@
           
           </div></div></div></div><div class="owl-item" style="width: 347px;"><div class="owl-controls clickable"><div class="owl-pagination"><div class="owl-page active"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div><div class="owl-page"><span class=""></span></div></div></div></div></div></div><!-- /.single-product-gallery-item -->
 
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
-
-            <!-- /.single-product-gallery-item -->
+           
 
         </div><!-- /.single-product-slider -->
 
@@ -98,7 +85,7 @@
 </div><!-- /.gallery-holder -->        			
 					<div class="col-sm-7 col-md-5 product-info-block">
 						<div class="product-info">
-							<h1 class="name">Timberland Men’s Thorton Waterproof Boots</h1>
+							<h1 class="name">@Model.Name</h1>
 							
 							<div class="rating-reviews m-t-20">
 								<div class="row">
@@ -108,7 +95,7 @@
 									</div>
 									<div class="pull-left">
 										<div class="reviews">
-											<a href="#" class="lnk">(13 Reviews)</a>
+											@*<a href="#" class="lnk">(13 Reviews)</a>*@
 										</div>
 									</div>
                                     </div>
@@ -120,12 +107,12 @@
                                 <div class="col-lg-12">
 									<div class="pull-left">
 										<div class="stock-box">
-											<span class="label">Availability :</span>
+											@*<span class="label">Availability :</span>*@
 										</div>	
 									</div>
 									<div class="pull-left">
 										<div class="stock-box">
-											<span class="value">In Stock</span>
+											@*<span class="value">In Stock</span>*@
 										</div>	
 									</div>
                                     </div>
@@ -136,8 +123,8 @@
 
 									<div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
 										<div class="price-box">
-											<span class="price">$800.00</span>
-											<span class="price-strike">$900.00</span>
+											<span class="price">@Model.CurrentPrice.ToString("C", new CultureInfo("ca-CA"))</span>
+											<span class="price-strike">@Model.Sale_Story</span>
 										</div>
 									</div>
 
@@ -178,7 +165,7 @@
 									</div>
 
 									<div class="add-btn">
-										<a asp-page="" Html.ExternalLink(@Model.Url) class="btn btn-primary"><i class="fa fa-shopping-cart inner-right-vs"></i> Buy Product</a>
+										<a href="@Model.Url" target="_blank" class="btn btn-primary"><i class="fa fa-shopping-cart inner-right-vs"></i> Buy Product</a>
 									</div>
 									
 								</div><!-- /.row -->
@@ -188,8 +175,8 @@
 					</div><!-- /.col-sm-7 -->
                     <div class="col-lg-3 col-sm-12 col-md-3">
                     <div class="store-details">
-                     <img alt="" src="assets/images/brands/store.png">
-                    <h2><a href="#">Amazon.com</a></h2>
+                     <img alt="" src="@Model.Merchant.LogoFile">
+                    <h2><a href="#"></a></h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
                     </div>
                     </div>
