--- a/BigSave.Web/Views/Shared/_Layout.cshtml
+++ b/BigSave.Web/Views/Shared/_Layout.cshtml
@@ -12,18 +12,18 @@
   <title>DealDots premium HTML5 & CSS3 Template</title>
 
   <!-- Bootstrap Core CSS -->
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/bootstrap.min.css")' />
+  <link rel="stylesheet" href="~/assets/css/bootstrap.min.css")' />
 
   <!-- Customizable CSS -->
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/main.css")' />
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/blue.css")' />
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/owl.carousel.css")' />
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/owl.transitions.css")' />
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/rateit.css")' />
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/bootstrap-select.min.css")' />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/blue.css" />
+  <link rel="stylesheet" href="/assets/css/owl.carousel.css" />
+  <link rel="stylesheet" href="/assets/css/owl.transitions.css" />
+  <link rel="stylesheet" href="/assets/css/rateit.css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap-select.min.css" />
 
   <!-- Icons/Glyphs -->
-  <link rel="stylesheet" href='@Url.Content("~/assets/css/font-awesome.css")' />
+  <link rel="stylesheet" href="~/assets/css/font-awesome.css")' />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Barlow:200,300,300i,400,400i,500,500i,600,700,800"
@@ -56,18 +56,18 @@
   <!-- For demo purposes – can be removed on production : End -->
 
   <!-- JavaScripts placed at the end of the document so the pages load faster -->
-  <script src='@Url.Content("~/assets/js/jquery-1.11.1.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/bootstrap.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/bootstrap-hover-dropdown.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/owl.carousel.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/echo.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/jquery.easing-1.3.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/bootstrap-slider.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/jquery.rateit.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/lightbox.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/bootstrap-select.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/wow.min.js")'></script>
-  <script src='@Url.Content("~/assets/js/scripts.js")'></script>
+  <script src="/assets/js/jquery-1.11.1.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="/assets/js/bootstrap-hover-dropdown.min.js"></script>
+  <script src="/assets/js/owl.carousel.min.js"></script>
+  <script src="/assets/js/echo.min.js"></script>
+  <script src="/assets/js/jquery.easing-1.3.min.js"></script>
+  <script src="/assets/js/bootstrap-slider.min.js"></script>
+  <script src="/assets/js/jquery.rateit.min.js"></script>
+  <script src="/assets/js/lightbox.min.js"></script>
+  <script src="/assets/js/bootstrap-select.min.js"></script>
+  <script src="/assets/js/wow.min.js"></script>
+  <script src="/assets/js/scripts.js"></script>
   @RenderSection("scripts", required: false)
 </body>
 
