--- a/BigSave.Web/Views/Shared/_Layout2.cshtml
+++ b/BigSave.Web/Views/Shared/_Layout2.cshtml
@@ -1,80 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="telephone=no">
-    <title>AllStore - MultiConcept eCommerce Template</title>
+<!-- Meta -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+<meta name="keywords" content="MediaCenter, Template, eCommerce">
+<meta name="robots" content="all">
+<title>DealDots premium HTML5 & CSS3 Template</title>
 
-    <link
-        href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700ii%7CRoboto:300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic"
-        rel="stylesheet">
+<!-- Bootstrap Core CSS -->
+<link rel="stylesheet" href="/asset/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/ion.rangeSlider.css">
-    <link rel="stylesheet" href="/css/ion.rangeSlider.skinFlat.css">
-    <link rel="stylesheet" href="/css/jquery.bxslider.css">
-    <link rel="stylesheet" href="/css/jquery.fancybox.css">
-    <link rel="stylesheet" href="/css/flexslider.css">
-    <link rel="stylesheet" href="/css/swiper.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+<!-- Customizable CSS -->
+<link rel="stylesheet" href="/asset/css/main.css">
+<link rel="stylesheet" href="/asset/css/blue.css">
+<link rel="stylesheet" href="/asset/css/owl.carousel.css">
+<link rel="stylesheet" href="/asset/css/owl.transitions.css">
+<link rel="stylesheet" href="/asset/css/rateit.css">
+<link rel="stylesheet" href="/asset/css/bootstrap-select.min.css">
 
+<!-- Icons/Glyphs -->
+<link rel="stylesheet" href="/asset/css/font-awesome.css">
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Barlow:200,300,300i,400,400i,500,500i,600,700,800" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,800' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
-
 <body>
-    <!-- Header - start -->
-    <header class="header">
+<!-- ============================================== HEADER ============================================== -->
+<partial name ="_HeaderPartial"></partial>
 
-        <!-- Topbar - start -->
-        <partial name="_TopbarPartial"></partial>
-        <!-- Topbar - end -->
-
-        <!-- Logo, Shop-menu - start -->
-        <partial name="_HeaderMiddlePartial"></partial>
-        <!-- Logo, Shop-menu - end -->
-
-        <!-- Topmenu - start -->
-        <partial name="_HeaderBottomPartial"></partial>
-        <!-- Topmenu - end -->
-
-    </header>
-    <!-- Header - end -->
+<!-- ============================================== HEADER : END ============================================== --> 
 
 
-    <!-- Main Content - start -->
-    <main>
+<!-- /.breadcrumb -->
+<partial  name ="_BreadcrumbPartial"></partial>
 
-        @RenderBody()
-        <!-- Main Content - end -->
+@RenderBody()
+  <!-- ============================================================= FOOTER ============================================================= -->
+<partial name="_FooterPartial"></partial>
+<!-- For demo purposes – can be removed on production --> 
 
+<!-- For demo purposes – can be removed on production : End --> 
 
-        <!-- Footer - start -->
-        <partial name="_FooterPartial"></partial>
-        <!-- Footer - end -->
-
-
-        <!-- jQuery plugins/scripts - start -->
-        <script src="/js/jquery-1.11.2.min.js"></script>
-        <script src="/js/jquery.bxslider.min.js"></script>
-        <script src="/js/fancybox/fancybox.js"></script>
-        <script src="/js/fancybox/helpers/jquery.fancybox-thumbs.js"></script>
-        <script src="/js/jquery.flexslider-min.js"></script>
-        <script src="/js/swiper.jquery.min.js"></script>
-        <script src="/js/jquery.waypoints.min.js"></script>
-        <script src="/js/progressbar.min.js"></script>
-        <script src="/js/ion.rangeSlider.min.js"></script>
-        <script src="/js/chosen.jquery.min.js"></script>
-        <script src="/js/jQuery.Brazzers-Carousel.js"></script>
-        <script src="/js/plugins.js"></script>
-        <script src="/js/main.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhAYvx0GmLyN5hlf6Uv_e9pPvUT3YpozE"></script>
-        <script src="/js/gmap.js"></script>
-        <!-- jQuery plugins/scripts - end -->
-
+<!-- JavaScripts placed at the end of the document so the pages load faster --> 
+<script src="/asset/js/jquery-1.11.1.min.js"></script> 
+<script src="/asset/js/bootstrap.min.js"></script> 
+<script src="/asset/js/bootstrap-hover-dropdown.min.js"></script> 
+<script src="/asset/js/owl.carousel.min.js"></script> 
+<script src="/asset/js/echo.min.js"></script> 
+<script src="/asset/js/jquery.easing-1.3.min.js"></script> 
+<script src="/asset/js/bootstrap-slider.min.js"></script> 
+<script src="/asset/js/jquery.rateit.min.js"></script> 
+<script src="/asset/js/lightbox.min.js"></script> 
+<script src="/asset/js/bootstrap-select.min.js"></script> 
+<script src="/asset/js/wow.min.js"></script> 
+<script src="/asset/js/scripts.js"></script>
 </body>
-
 </html>
